<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingBottom="14dp"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
            >

<!--            <androidx.appcompat.widget.AppCompatEditText-->
<!--                android:id="@+id/edittext_signup_name"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/sign_up_name"-->
<!--                android:background="@drawable/shape_edittext"-->
<!--                android:padding="20dp"-->
<!--                android:layout_margin="10dp"-->
<!--                />-->

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_email"
                android:background="@drawable/shape_edittext"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:inputType="textEmailAddress"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_password"
                android:background="@drawable/shape_edittext"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_signup_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_confirm_password"
                android:background="@drawable/shape_edittext"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_signup_term_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_terms_and_policy"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_margin="10dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up_valid_account"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:textColor="#424242"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_signup_already_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_in"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:textColor="@color/teal_700"
                    android:layout_marginStart="6dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
